# TouchController-Monorepo

./: .bazelignore  .bazelrc  .buildifier.json  .buildifier.tables.json  .clang-format  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json  neoforge_pin.txt  neoform_pin.txt  repin_all.sh
armorstand/: BUILD.bazel  NEWS-en.md  NEWS-zh.md  properties.bzl
armorstand/client/: BUILD.bazel
armorstand/client/resources/: armorstand.mixins.client.json
armorstand/fabric_client/: BUILD.bazel
armorstand/fabric_main/: BUILD.bazel
armorstand/main/: BUILD.bazel
armorstand/neoforge_client/: BUILD.bazel
armorstand/neoforge_main/: BUILD.bazel
authproxy/: BUILD.bazel
blazerod/: BUILD.bazel  properties.bzl  publish_maven.sh
blazerod/benchmark/direct_buffers/: BUILD.bazel  BufferGenerator.java  DirectBuffers.java  test_data_generator.c
blazerod/example/ball_block/: BUILD.bazel
blazerod/model/model-assimp/: AssimpLoader.kt  BUILD.bazel
blazerod/model/model-base/: Accessor.kt  BUILD.bazel  HumanoidTag.kt
blazerod/model/model-base/animation/: AnimationChannel.kt  AnimationContext.kt  AnimationInterpolator.kt  KeyFrameAnimationChannel.kt
blazerod/model/model-base/physics/: PhysicsJoint.kt  RigidBody.kt
blazerod/model/model-base/util/: MutableBoolean.kt
blazerod/model/model-bedrock/: BUILD.bazel  BedrockModelJsonLoader.kt  BedrockModelLoader.kt  GsonUtil.kt
blazerod/model/model-bedrock/animation/: MolangAnimationChannel.kt
blazerod/model/model-formats/: BUILD.bazel  ModelFileLoaders.kt
blazerod/model/model-gltf/: BUILD.bazel  GltfBinaryLoader.kt  GltfLoader.kt
blazerod/model/model-gltf/format/: Gltf.kt
blazerod/model/model-gltf/test/: BUILD.bazel
blazerod/model/model-loader/: BUILD.bazel
blazerod/model/model-pmd/: BUILD.bazel  PmdLoader.kt
blazerod/model/model-pmx/: BUILD.bazel  PmxLoader.kt
blazerod/model/model-pmx/test/: BUILD.bazel
blazerod/model/model-vmd/: BUILD.bazel  VmdLoader.kt
blazerod/render/: BUILD.bazel
blazerod/render/api/: BUILD.bazel  BlazeRodApi.template.kt
blazerod/render/api/animation/: AnimationItem.kt  BUILD.bazel
blazerod/render/api/event/: Event.kt  RenderEvents.kt
blazerod/render/api/loader/: ModelLoader.kt
blazerod/render/api/physics/: BUILD.bazel  PhysicsEngine.kt
blazerod/render/api/refcount/: BUILD.bazel  RefCount.kt
blazerod/render/api/resource/: BUILD.bazel  CameraTransform.kt  ModelInstance.kt  RenderExpression.kt  RenderNode.kt  RenderScene.kt  RenderTask.kt
blazerod/render/common/: BUILD.bazel  BlazeRod.kt
blazerod/render/common/debug/: BUILD.bazel  ObjectCountTrackerFrame.kt  ObjectPoolTracker.kt  ResourceCountTracker.kt  ResourceCountTrackerFrame.kt  UniformBufferTracker.kt  UniformBufferTrackerFrame.kt
blazerod/render/common/layout/: BUILD.bazel  GpuDataLayout.kt  LayoutStrategy.kt
blazerod/render/common/physics/: BUILD.bazel  PhysicsInterface.kt  PhysicsScene.cpp  PhysicsScene.h  PhysicsScene.kt  PhysicsWorld.cpp  PhysicsWorld.h  PhysicsWorld.kt
blazerod/render/common/resource/: BUILD.bazel  CameraTransformImpl.kt  MorphTargetGroup.kt  RenderPhysicsJoint.kt  RenderSkin.kt
blazerod/render/main/animation/: AnimationChannelItem.kt  AnimationItemImpl.kt  AnimationLoader.kt  BUILD.bazel  CrossfadeAnimationItemInstance.kt
blazerod/render/main/extension/: BUILD.bazel
blazerod/render/main/layout/: GpuDataLayout.kt
blazerod/render/main/mixin/: BUILD.bazel  GpuBufferSliceMixin.java  RenderPipelineMixin.java  (+3 more)
blazerod/util/nativeloader/: BUILD.bazel  NativeLoader.java
blazesdl/: BUILD.bazel  EventCallback.java  SDLError.java  SDLGlBackend.java  SDLGlDevice.java  SDLKeyMapping.java  SDLMonitor.java  SDLScreenManager.java  SDLUtil.java  SDLVideoMode.java  SDLWindow.java  fabric.mod.json  maven_install.json  properties.bzl
blazesdl/mixin/: Blaze3DMixin.java  CursorTypeMixin.java  EditBoxMixin.java  GLFWMixin.java  GlDeviceMixin.java  InputConstantsMixin.java  MinecraftMixin.java  RenderSystemMixin.java  ScreenManagerMixin.java  WindowMixin.java
blazesdl/resources/: blazesdl.classtweaker  blazesdl.mixins.json
combine/: BUILD.bazel  properties.bzl
combine/backend/minecraft/: versions.bzl
combine/core/animation/: BUILD.bazel  MutableValue.kt
combine/core/data/: BUILD.bazel  Identifier.kt  Text.kt
combine/core/layout/: BUILD.bazel  Layout.kt
combine/core/modifier/: BUILD.bazel
combine/core/node/: BUILD.bazel  CombineOwner.kt  LayoutNode.kt  NodeRenderer.kt
combine/core/paint/: BUILD.bazel  Canvas.kt  Drawable.kt  TextMeasurer.kt  Texture.kt
combine/core/screen/: BUILD.bazel  CloseHandler.kt  ScreenFactory.kt
combine/core/sound/: BUILD.bazel
combine/core/widget/: BUILD.bazel  BaseText.kt  Canvas.kt  Texture.kt
combine/data/: BUILD.bazel  Size.kt
combine/example/calculator/: BUILD.bazel  CalculatorMod.kt
combine/example/hello_world/: BUILD.bazel  HelloWorldMod.kt
combine/example/widget_factory/: BUILD.bazel  WidgetFactoryMod.kt
combine/item/: BUILD.bazel
combine/item/data/: BUILD.bazel  Item.kt  ItemStack.kt
combine/item/paint/: BUILD.bazel  ItemCanvas.kt
combine/item/widget/: BUILD.bazel  Item.kt  ItemButton.kt  ItemGrid.kt
combine/resources/: BUILD.bazel
combine/style/: BUILD.bazel  ColorTheme.kt  TextStyle.kt
combine/theme/: BUILD.bazel  theme_info_jar.bzl
combine/theme/base/: Theme.kt
combine/theme/blackstone/: BUILD.bazel  BlackstoneTheme.kt
combine/theme/oreui/: BUILD.bazel  OreUITheme.kt
combine/theme/resources/: fabric.mod.json
combine/theme/vanilla/: BUILD.bazel
combine/widget/: BUILD.bazel  Button.kt  ColorPicker.kt  DropDownMenu.kt  EditText.kt  Icon.kt  IconButton.kt  Radio.kt  Slider.kt  Switch.kt  TextButton.kt  WidgetState.kt
module/: android.MODULE.bazel  armorstand.MODULE.bazel  blazerod.MODULE.bazel  blazesdl.MODULE.bazel  combine.MODULE.bazel  compose.MODULE.bazel  copybara.MODULE.bazel  fabric.MODULE.bazel  jmh.MODULE.bazel  llvm-mingw.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel  rules.MODULE.bazel  rust.MODULE.bazel  touchcontroller.MODULE.bazel
toolchain/: BUILD.bazel
(+1199 files in other folders)
