"TouchController module file"

module(
    name = "touchcontroller",
    version = "0.3.1-alpha",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_mdbook", version = "0.68.1")
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_android_ndk", version = "0.1.3")
bazel_dep(name = "rules_python", version = "1.8.0-rc1")
bazel_dep(name = "rules_jni", version = "0.11.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.0.1")
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

# libraries
bazel_dep(name = "libexpat", version = "2.7.1")
bazel_dep(name = "libffi", version = "3.4.7.bcr.3")
bazel_dep(name = "bullet", version = "3.26.0-rc0.bcr.1")
bazel_dep(name = "glfw", version = "3.4.0.bcr.1")
bazel_dep(name = "glm", version = "1.0.2")

# toolchain
include("//module:zig_cc.MODULE.bazel")
include("//module:llvm-mingw.MODULE.bazel")

# languages
include("//module:rust.MODULE.bazel")

# platforms
include("//module:android.MODULE.bazel")

# tools
include("//module:mdbook.MODULE.bazel")

# rules
include("//module:rules.MODULE.bazel")
include("//module:minecraft.MODULE.bazel")
include("//module:modrinth.MODULE.bazel")

# loaders
include("//module:neoforge.MODULE.bazel")
include("//module:fabric.MODULE.bazel")

# third party
include("//module/third_party:sodium.MODULE.bazel")
include("//module/third_party:iris.MODULE.bazel")
include("//module/third_party:mocha.MODULE.bazel")
include("//module/third_party:wayland.MODULE.bazel")
include("//module/third_party:saba.MODULE.bazel")

# projects
include("//module:blazerod.MODULE.bazel")
include("//module:armorstand.MODULE.bazel")
include("//module:combine.MODULE.bazel")
include("//module:touchcontroller.MODULE.bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Kotlin
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.0",
        "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.4.0",

        # Graphics
        "org.joml:joml:1.10.5",
        "it.unimi.dsi:fastutil:8.5.15",

        # Swing
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.1",

        # Testing
        "org.jetbrains.kotlin:kotlin-test-junit5:2.1.10",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-suite-api:1.12.2",
        "org.junit.platform:junit-platform-suite-engine:1.12.2",
        "org.junit.platform:junit-platform-console:1.12.2",
    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://maven.fabricmc.net/",
        "https://maven.neoforged.net/releases",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
