load("@//rule:upload_modrinth.bzl", "modrinth_dependency", "upload_modrinth")
load("@rules_java//java:defs.bzl", "java_binary")
load("//armorstand:properties.bzl", "armorstand_version")
load("//blazerod:properties.bzl", "blazerod_version")
load("//rule:extract_update_log.bzl", "extract_update_log")
load("//rule:remap_jar.bzl", "remap_jar")
load("//rule/fabric:merge_jij.bzl", "fabric_merge_jij")
load("//rule/neoforge:merge_jij.bzl", "neoforge_merge_jij")

extract_update_log(
    name = "update_log",
    inputs = [
        "NEWS-zh.md",
        "NEWS-en.md",
    ],
    version = armorstand_version,
)

alias(
    name = "mod_fabric_unmapped",
    actual = "//armorstand/fabric_client:fabric_unmapped",
    visibility = ["//visibility:public"],
)

alias(
    name = "mod_neoforge_merged",
    actual = "//armorstand/neoforge_client:neoforge_merged",
    visibility = ["//visibility:public"],
)

alias(
    name = "mod_fabric_unmapped_merged",
    actual = "//armorstand/fabric_client:fabric_unmapped_merged",
    visibility = ["//visibility:public"],
)

remap_jar(
    name = "mod_fabric_merged",
    classpath = ["//game/1.21.8:game_client_named"],
    from_namespace = "named",
    inputs = [":mod_fabric_unmapped_merged"],
    mapping = "//game/1.21.8:game_merged_mapping",
    mixin = True,
    to_namespace = "intermediary",
    visibility = ["//visibility:public"],
)

fabric_merge_jij(
    name = "mod_fabric",
    input = ":mod_fabric_merged",
    visibility = ["//visibility:public"],
    deps = {
        "@maven//:com_h2database_h2": "com_h2database_h2:2.4.240",
        "@maven//:com_illposed_osc_javaosc_core": "com_illposed_osc_javaosc_core:0.9",
        "@mocha//:mocha": "team_unnamed_mocha:3.0.1",
        "@maven//:org_javassist_javassist": "org_javassist_javassist:3.30.2-GA",
        "//blazerod/model/model-base": "blazerod-model-base:=",
        "//blazerod/model/model-loader": "blazerod-model-loader:=",
        "//blazerod/model/model-formats": "blazerod-model-formats:=",
        "//blazerod/model/model-gltf": "blazerod-model-formats-gltf:=",
        "//blazerod/model/model-pmd": "blazerod-model-formats-pmd:=",
        "//blazerod/model/model-pmx": "blazerod-model-formats-pmx:=",
        "//blazerod/model/model-vmd": "blazerod-model-formats-vmd:=",
        "//blazerod/model/model-bedrock": "blazerod-model-formats-bedrock:=",
        "//blazerod/render:render_fabric_merged": "blazerod-render:=",
        "//blazerod:blazerod_fabric_without_jij": "blazerod:=",
    },
)

neoforge_merge_jij(
    name = "mod_neoforge",
    input = ":mod_neoforge_merged",
    visibility = ["//visibility:public"],
    deps = {
        "@maven//:com_h2database_h2": "com.h2database:h2:2.4.240:LIBRARY",
        "@maven//:com_illposed_osc_javaosc_core": "com.illposed.osc:javaosc.core:0.9:LIBRARY",
        "@mocha//:mocha": "team.unnamed:mocha:3.0.1:LIBRARY",
        "@maven//:org_javassist_javassist": "org.javassist:javassist:3.30.2-GA:LIBRARY",
        "//blazerod/model/model-base": "top.fifthlight.blazerod:blazerod-model-base:%s:" % blazerod_version,
        "//blazerod/model/model-loader": "top.fifthlight.blazerod:blazerod-model-loader:%s:" % blazerod_version,
        "//blazerod/model/model-formats": "top.fifthlight.blazerod:blazerod-model-formats:%s:" % blazerod_version,
        "//blazerod/model/model-gltf": "top.fifthlight.blazerod:blazerod-model-formats-gltf:%s:" % blazerod_version,
        "//blazerod/model/model-pmd": "top.fifthlight.blazerod:blazerod-model-formats-pmd:%s:" % blazerod_version,
        "//blazerod/model/model-pmx": "top.fifthlight.blazerod:blazerod-model-formats-pmx:%s:" % blazerod_version,
        "//blazerod/model/model-vmd": "top.fifthlight.blazerod:blazerod-model-formats-vmd:%s:" % blazerod_version,
        "//blazerod/model/model-bedrock": "top.fifthlight.blazerod:blazerod-model-formats-bedrock:%s:" % blazerod_version,
        "//blazerod/render:render_neoforge_merged": "top.fifthlight.blazerod:blazerod-render:%s:" % blazerod_version,
        "//blazerod:blazerod_neoforge_without_jij": "top.fifthlight.blazerod:blazerod:%s:" % blazerod_version,
    },
)

java_binary(
    name = "dev_client",
    srcs = [],
    data = [
        "//blazerod/model/example-models",
        "@makeup_ultra_fast//:primary",
        "@minecraft_assets//:assets",
        "@minecraft_assets//:assets_1.21.8",
    ],
    env = {
        "LANG": "en_US.UTF8",
    },
    jvm_flags = [
        "-Dkotlinx.coroutines.debug=on",
        "-Dfabric.development=true",
        "-Ddev.launch.version=1.21.8",
        "-Ddev.launch.type=client",
        "-Ddev.launch.assetsPath=$(rlocationpath @minecraft_assets//:assets)",
        "-Ddev.launch.mainClass=net.fabricmc.loader.impl.launch.knot.KnotClient",
        "-Ddev.launch.copyFiles=" +
        "$(rlocationpath @makeup_ultra_fast//:primary):shaderpacks/MakeUp-UltraFast-9.2.zip," +
        "$(rlocationpath //blazerod/model/example-models:example-models):models",
        "-Dblazerod.debug=true",
        "-Dblazerod.debug.gui=true",
        "-Darmorstand.debug=true",
        "-Darmorstand.debug.bone=false",
        "-Darmorstand.debug.gui=false",
        "-Xmx4G",
    ],
    main_class = "top.fifthlight.fabazel.devlaunchwrapper.DevLaunchWrapper",
    runtime_deps = [
        "//game/1.21.8:game_client_named",
        "@minecraft//1.21.8:client_libraries",
        # Classpath separator
        ":mod_fabric_unmapped",
        "//armorstand/fabric_client:remapped_deps",
        "//blazerod:blazerod_fabric_without_jij",
        "//game/1.21.8:game_iris_named",
        "//game/1.21.8:game_mapping_jar",
        "//game/1.21.8:game_sodium_named",
        "//rule/dev_launch_wrapper",
        "@maven//:com_h2database_h2",
        "@maven//:com_illposed_osc_javaosc_core",
        "@maven//:io_github_douira_glsl_transformer",
        "@maven//:org_anarres_jcpp",
        "@maven//:org_antlr_antlr4_runtime",
        "@maven_fabric_1_21_8//:io_github_llamalad7_mixinextras_fabric",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_language_kotlin",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_loader",
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
    ],
)

java_binary(
    name = "dev_server",
    srcs = [],
    jvm_flags = [
        "-Dfabric.development=true",
        "-Ddev.launch.version=1.21.8",
        "-Ddev.launch.type=server",
        "-Ddev.launch.mainClass=net.fabricmc.loader.impl.launch.knot.KnotServer",
        "-Xmx4G",
    ],
    main_class = "top.fifthlight.fabazel.devlaunchwrapper.DevLaunchWrapper",
    runtime_deps = [
        ":mod_fabric_unmapped",
        "@minecraft//1.21.8:client_libraries",
        # Classpath separator
        "//armorstand/fabric_main:remapped_deps",
        "//game/1.21.8:game_mapping_jar",
        "//game/1.21.8:game_server_named",
        "//rule/dev_launch_wrapper",
        "@maven_fabric_1_21_8//:io_github_llamalad7_mixinextras_fabric",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_language_kotlin",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_loader",
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
    ],
)

modrinth_dependency(
    name = "fabric_api",
    dependency_type = "required",
    project_id = "P7dR8mSH",
    version_id = "X2hTodix",
)

modrinth_dependency(
    name = "fabric_language_kotlin",
    dependency_type = "required",
    project_id = "Ha28R6CL",
    version_id = "Y91MRWtG",
)

modrinth_dependency(
    name = "modmenu",
    dependency_type = "optional",
    project_id = "mOgUt4GM",
)

upload_modrinth(
    name = "upload_modrinth_fabric",
    changelog = ":update_log",
    file = ":mod_fabric",
    file_name = "ArmorStand-%s+fabric.jar" % armorstand_version,
    game_versions = ["1.21.8"],
    loaders = ["fabric"],
    project_id = "tLPuDSOw",
    token_secret_id = "modrinth_token",
    version_id = armorstand_version + "+fabric",
    version_name = armorstand_version,
    version_type = "alpha",
    deps = [
        ":fabric_api",
        ":fabric_language_kotlin",
        ":modmenu",
    ],
)

modrinth_dependency(
    name = "kotlin_for_forge",
    dependency_type = "required",
    project_id = "ordsPcFz",
    version_id = "pp2cY80Q",
)

upload_modrinth(
    name = "upload_modrinth_neoforge",
    changelog = ":update_log",
    file = ":mod_neoforge",
    file_name = "ArmorStand-%s+neoforge.jar" % armorstand_version,
    game_versions = ["1.21.8"],
    loaders = ["neoforge"],
    project_id = "tLPuDSOw",
    token_secret_id = "modrinth_token",
    version_id = armorstand_version + "+neoforge",
    version_name = armorstand_version,
    version_type = "alpha",
    deps = [
        ":kotlin_for_forge",
    ],
)
