load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "authproxy",
    srcs = ["MainMixin.java"],
    javacopts = [
        "--release",
        "8",
    ],
    resource_strip_prefix = "authproxy/resources",
    resources = glob(["resources/**"]),
    deps = [
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
        "@minecraft//1.21.8:client",
        "@minecraft//1.21.8:client_libraries",
    ],
)
