load("@rules_java//java:defs.bzl", "java_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("//blazerod:properties.bzl", "blazerod_version", "home_page", "issue_tracker", "license")
load("//rule/fabric:merge_jij.bzl", "fabric_merge_jij")
load("//rule/fabric:mod_json_jar.bzl", "fabric_mod_json_jar")
load("//rule/neoforge:merge_jij.bzl", "neoforge_merge_jij")
load("//rule/neoforge:mod_toml_jar.bzl", "neoforge_mod_toml_jar")

java_library(
    name = "icon",
    resource_strip_prefix = "blazerod/resources",
    resources = ["resources/assets/blazerod/icon.png"],
    visibility = ["//visibility:public"],
)

alias(
    name = "license",
    actual = "LICENSE",
)

java_library(
    name = "license_jar",
    resources = [":license"],
)

fabric_mod_json_jar(
    name = "fabric_mod_json",
    src = "resources/fabric.mod.json",
    resource_strip_prefix = "blazerod",
    substitutions = {
        "${version}": blazerod_version,
    },
)

neoforge_mod_toml_jar(
    name = "neoforge_mod_toml",
    src = "resources/META-INF/neoforge.mods.toml",
    resource_strip_prefix = "blazerod",
    substitutions = {
        "${version}": blazerod_version,
        "${license}": license,
        "${home_page}": home_page,
        "${issue_tracker}": issue_tracker,
    },
)

kt_jvm_library(
    name = "blazerod_fabric_without_jij",
    srcs = ["src/Dummy.kt"],
    resource_jars = [
        ":fabric_mod_json",
        ":license_jar",
    ],
    resource_strip_prefix = "blazerod/resources",
    resources = glob(
        include = ["resources/**"],
        exclude = [
            "resources/fabric.mod.json",
            "resources/META-INF/neoforge.mods.toml",
        ],
    ),
    visibility = ["//visibility:public"],
    exports = [
        "//blazerod/model/model-base",
        "//blazerod/model/model-formats",
        "//blazerod/model/model-loader",
        "//blazerod/render:render_fabric_unmapped",
    ],
)

kt_jvm_library(
    name = "blazerod_neoforge_without_jij",
    srcs = ["src/Dummy.kt"],
    resource_jars = [
        ":neoforge_mod_toml",
        ":license_jar",
    ],
    resource_strip_prefix = "blazerod/resources",
    resources = glob(
        include = ["resources/**"],
        exclude = [
            "resources/fabric.mod.json",
            "resources/META-INF/neoforge.mods.toml",
        ],
    ),
    visibility = ["//visibility:public"],
    exports = [
        "//blazerod/model/model-base",
        "//blazerod/model/model-formats",
        "//blazerod/model/model-loader",
        "//blazerod/render:render_neoforge",
    ],
)

fabric_merge_jij(
    name = "blazerod_fabric",
    input = ":blazerod_fabric_without_jij",
    visibility = ["//visibility:public"],
    deps = {
        "@mocha//:mocha": "team_unnamed_mocha:3.0.1",
        "@maven//:org_javassist_javassist": "org_javassist_javassist:3.30.2-GA",
        "//blazerod/model/model-base": "blazerod-model-base:=",
        "//blazerod/model/model-loader": "blazerod-model-loader:=",
        "//blazerod/model/model-formats": "blazerod-model-formats:=",
        "//blazerod/model/model-gltf": "blazerod-model-formats-gltf:=",
        "//blazerod/model/model-pmd": "blazerod-model-formats-pmd:=",
        "//blazerod/model/model-pmx": "blazerod-model-formats-pmx:=",
        "//blazerod/model/model-vmd": "blazerod-model-formats-vmd:=",
        "//blazerod/model/model-bedrock": "blazerod-model-formats-bedrock:=",
        "//blazerod/render:render_fabric_merged": "blazerod-render:=",
    },
)

neoforge_merge_jij(
    name = "blazerod_neoforge",
    input = ":blazerod_neoforge_without_jij",
    visibility = ["//visibility:public"],
    deps = {
        "@mocha//:mocha": "team.unnamed:mocha:3.0.1:LIBRARY",
        "@maven//:org_javassist_javassist": "org.javassist:javassist:3.30.2-GA:LIBRARY",
        "//blazerod/model/model-base": "top.fifthlight.blazerod:blazerod-model-base:%s:" % blazerod_version,
        "//blazerod/model/model-loader": "top.fifthlight.blazerod:blazerod-model-loader:%s:" % blazerod_version,
        "//blazerod/model/model-formats": "top.fifthlight.blazerod:blazerod-model-formats:%s:" % blazerod_version,
        "//blazerod/model/model-gltf": "top.fifthlight.blazerod:blazerod-model-formats-gltf:%s:" % blazerod_version,
        "//blazerod/model/model-pmd": "top.fifthlight.blazerod:blazerod-model-formats-pmd:%s:" % blazerod_version,
        "//blazerod/model/model-pmx": "top.fifthlight.blazerod:blazerod-model-formats-pmx:%s:" % blazerod_version,
        "//blazerod/model/model-vmd": "top.fifthlight.blazerod:blazerod-model-formats-vmd:%s:" % blazerod_version,
        "//blazerod/model/model-bedrock": "top.fifthlight.blazerod:blazerod-model-formats-bedrock:%s:" % blazerod_version,
        "//blazerod/render:render_fabric_merged": "top.fifthlight.blazerod:blazerod-render:%s:" % blazerod_version,
    },
)
