load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "combine",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/core/animation",
        "//combine/core/data",
        "//combine/core/input/focus",
        "//combine/core/input/interaction",
        "//combine/core/input/key",
        "//combine/core/input/pointer",
        "//combine/core/input/text",
        "//combine/core/layout",
        "//combine/core/layout/constraints",
        "//combine/core/layout/measure",
        "//combine/core/modifier",
        "//combine/core/modifier/drawing",
        "//combine/core/modifier/focus",
        "//combine/core/modifier/input",
        "//combine/core/modifier/key",
        "//combine/core/modifier/placement",
        "//combine/core/modifier/pointer",
        "//combine/core/modifier/scroll",
        "//combine/core/node",
        "//combine/core/paint",
        "//combine/core/screen",
        "//combine/core/sound",
        "//combine/core/util/math",
        "//combine/core/widget",
        "//combine/core/widget/layout",
        "//combine/data",
        "//combine/style",
        "//combine/theme/base",
        "//combine/theme/vanilla",
        "//combine/widget",
    ],
)
