"MODULE.bazel ArmorStand part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.h2database:h2:2.4.240",
        "com.illposed.osc:javaosc-core:0.9",
        "org.antlr:antlr4-runtime:4.13.2",
        "io.github.douira:glsl-transformer:2.0.2",
        "org.anarres:jcpp:1.4.14",
    ],
)

# For dev client
modrinth = use_extension("//repo:modrinth.bzl", "modrinth")
modrinth.version(
    name = "makeup_ultra_fast",
    version_id = "jIWDGbU5",
)
use_repo(modrinth, "makeup_ultra_fast")
