"MODULE.bazel Compose part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.compose.ui:ui-desktop:1.10.0",
        "org.jetbrains.compose.ui:ui-graphics-desktop:1.10.0",
        "org.jetbrains.compose.material3:material3-desktop:1.10.0-alpha05",
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:kotlinx-coroutines-swing:1.10.1",
        "org.jetbrains.skiko:skiko-awt:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-windows-x64:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-windows-arm64:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-linux-x64:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-linux-arm64:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-macos-x64:0.9.37.3",
        "org.jetbrains.skiko:skiko-awt-runtime-macos-arm64:0.9.37.3",
        "org.jetbrains.compose.material:material-icons-core-desktop:1.7.3",
    ],
)
